...
        modifier = modifier
            .fillMaxWidth()
            .testTag(TEST_TAG_INSULT_TEXT)
    )
}

const val TEST_TAG_INSULT_TEXT = "InsultText"
const val TEST_TAG_INSULT_BUTTON = "InsultButton"

@Preview(name = "Light Theme", showBackground = true)
@Preview(name = "Dark Theme", uiMode = Configuration.UI_MODE_NIGHT_YES, showBackground = true)
@Composable
fun DefaultPreview() {
    MainScaffold(
...
