...
                }
            }
        }
    }
}

const val TEST_TAG_INSULT_TARGET_NAME = "InsultTargetName"

internal val names = listOf(
    "",
    "Ädu",
    "Andle",
    "Ändu",
...
